fix layout bug on route change

--- a/styles/antd-override.less
+++ b/styles/antd-override.less
@@ -65,3 +65,11 @@
 .ant-page-header {
   padding-left: 0px;
 }
+
+.ant-modal {
+  z-index: 1040;
+}
+
+.ant-popover {
+  z-index: 1010;
+}
